resized canvas to not be blurry, caused redrawing of everything. resolves #1

--- a/css/cravasse.css
+++ b/css/cravasse.css
@@ -4,11 +4,9 @@ body {
   margin: 0;
   text-align: center;
   background-color:#BADF9F;
- }
+}
 #world {
   margin: 0 auto 10px auto;
-  width: 480px;
-  height: 640px;
   clear: both;
   display: block;
   background:
